--- a/dingdong-demo-01/domain/pom.xml
+++ b/dingdong-demo-01/domain/pom.xml
@@ -57,6 +57,11 @@
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
