--- a/dingdong-demo-01/application/pom.xml
+++ b/dingdong-demo-01/application/pom.xml
@@ -133,6 +133,11 @@
       <version>1.11.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+    </dependency>
+
 
   </dependencies>
 
