--- a/dingdong-demo-01/pom.xml
+++ b/dingdong-demo-01/pom.xml
@@ -42,6 +42,12 @@
     <lombok.version>1.18.36</lombok.version>
     <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
     <mybatis.plus.starter.version>3.5.3.2</mybatis.plus.starter.version>
+    <mockito.version>2.28.2</mockito.version>
+    <powermock.version>2.0.4</powermock.version>
+    <junit5.version>5.5.2</junit5.version>
+    <mockito.junit5.version>2.25.1</mockito.junit5.version>
+    <junit4.version>4.12</junit4.version>
+    <assertj-core.version>3.14.0</assertj-core.version>
   </properties>
   <dependencies>
 
@@ -134,6 +140,12 @@
         <version>4.1.100.Final</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>redis.clients</groupId>
+        <artifactId>jedis</artifactId>
+        <version>2.10.2</version>
       </dependency>
 
     </dependencies>
