feat: optimize jackson @JsonTypeInfo
配合 spring data redis 大量减少 @class

--- a/dingdong-demo-01/entity/pom.xml
+++ b/dingdong-demo-01/entity/pom.xml
@@ -12,5 +12,9 @@
 
   <dependencies>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
   </dependencies>
 </project>
