--- a/dingdong-demo-01/application/pom.xml
+++ b/dingdong-demo-01/application/pom.xml
@@ -138,6 +138,11 @@
       <artifactId>jedis</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.msgpack</groupId>
+      <artifactId>jackson-dataformat-msgpack</artifactId>
+      <version>0.9.3</version>
+    </dependency>
 
   </dependencies>
 
