--- a/dingdong-demo-01/application/pom.xml
+++ b/dingdong-demo-01/application/pom.xml
@@ -144,6 +144,12 @@
       <version>0.9.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.esotericsoftware</groupId>
+      <artifactId>kryo</artifactId>
+      <version>5.6.2</version>
+    </dependency>
+
   </dependencies>
 
 
