--- a/dingdong-demo-01/application/pom.xml
+++ b/dingdong-demo-01/application/pom.xml
@@ -150,6 +150,17 @@
       <version>5.6.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-compress</artifactId>
+      <version>1.27.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.16.0</version>
+    </dependency>
+
   </dependencies>
 
 
