feat: optimize log dataformat

--- a/dingdong-demo-01/application/src/main/resources/application.yml
+++ b/dingdong-demo-01/application/src/main/resources/application.yml
@@ -98,4 +98,4 @@ logging:
       total-size-cap: 8192MB
       max-history: 256
   pattern:
-    dateformat: yyyy-MM-dd HH:mm:ss
+    dateformat: yyyy-MM-dd'T'HH:mm:ss.SSSXXX
