feat: add guava UT

--- a/guava-learn/pom.xml
+++ b/guava-learn/pom.xml
@@ -17,8 +17,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!-- maven-compiler-plugin 会自动读取此配置 -->
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
 
     <mockito.version>5.2.0</mockito.version>
     <junit5.version>5.9.2</junit5.version>
@@ -152,8 +152,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>9</source><target>9</target></configuration></plugin>
-
+      </plugin>
     </plugins>
 
   </build>
