feat(value): 增加 SpEL 示例并优化配置示例 - 修正 MySQL 数据源 URL 中的拼写错误 - 在 ConfigService 中添加新的 @Value 示例，包括：   - 字符串键值对的 Map   -从 Map 中读取特定键的值   - 从 System.getEnv() 和 System.getProperty() 中读取值 - 更新 application.yaml，添加新的配置示例 - 在测试用例中增加对新配置的验证

--- a/spring-framework/src/main/resources/application.yaml
+++ b/spring-framework/src/main/resources/application.yaml
@@ -8,5 +8,10 @@ mysql:
 
 map:
   from:
-    config: '{ 5: "10" }' # 必须有单引号
+    # config: '{ 5: "10" }'  # ok # 必须有单引号
+    # config: '{ "5": 10 }'  # ok # 必须有单引号
+    config: '{ 5: 10 }'  # ok # 必须有单引号
+    strMap: '{ "5": "10", "key1": "value1", "key2": "value2"}'
+
+priority-zzf: 'value from application.yaml'
 
