refactor(consul): 重构 Consul 相关配置及文档
- 更新 application.yml 中的 Consul 配置
- 重命名环境配置文件并调整 SSH命令格式
- 在 README.md 中添加 Consul 默认配置示例

--- a/spring-boot-app/application/src/main/resources/application.yml
+++ b/spring-boot-app/application/src/main/resources/application.yml
@@ -2,46 +2,33 @@
 # global config
 spring:
   application:
-    name: spring-consul-app
+    name: spring-boot-app
   jackson:
     default-property-inclusion: non_null
   config:
     # To change the connection properties of Consul Config either set spring.cloud.consul.host and spring.cloud.consul.port or add the host/port pair to the spring.config.import statement such as, spring.config.import=optional:consul:myhost:8500. The location in the import property has precedence over the host and port propertie.
     # import: 'optional:consul:'
     # Removing the optional: prefix will cause Consul Config to fail if it is unable to connect to Consul
-    import: 'optional:consul:localhost:8500'
+    import: 'optional:consul:'
   cloud:
     consul:
-      enabled: false
-      host: 127.0.0.1
-      port: 8500
       discovery:
-        enabled: true # default
-        instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
-        tags: ['spring-boot-actuator']
+        instanceId: ${spring.application.name}:${server.port} # 单机启动多个服务，以 server.port 区分
+        tags: ['spring-boot', 'actuator']
         metadata:
           author: zhang.zzf
-        # health check
-        register-health-check: true
-        health-check-path: "/actuator/health" # default
-        health-check-interval: 10s
+          env: dev
+          cluster: spring-boot-app
         health-check-timeout: 1s
+        healthCheckCriticalTimeout: 1m
       config:
-        enabled: true # default
-        prefixes: [config] # consul用于存储配置的文件夹根目录名为config
-        # sets the folder name used by all applications
-        # /config/application/data 中的配置可以配所有服务读取
-        default-context: application # default
         profile-separator: '::' # default
         # format: key_value
         format: yaml
-        data-key: data # default
-        watch:
-          enabled: true
 
 # 假设 consul 有以下配置。数字越小，配置优先级越高：
-# 1. config/spring-consul-app::dev/data
-# 2. config/spring-consul-app/data
+# 1. config/spring-boot-app::dev/data
+# 2. config/spring-boot-app/data
 # 3. config/application::dev/data
 # 4. config/application/data
 
