--- a/spring-boot-app/application/src/main/resources/application.yml
+++ b/spring-boot-app/application/src/main/resources/application.yml
@@ -101,9 +101,9 @@ spring:
         username: root
         password: test
         driver-class-name: com.mysql.cj.jdbc.Driver
-      my-db:
+      db0:
         maximum-pool-size: 4
-        jdbc-url: jdbc:mysql://localhost:3307/my_db
+        jdbc-url: jdbc:mysql://localhost:3306/db0
         username: root
         password: test
         driver-class-name: com.mysql.cj.jdbc.Driver
