feat(station): 增加前置仓查询功能
- 新增 StationRepoMySQLImpl 类实现前置仓查询功能
- 添加 DomainMapper 接口用于实体类转换
- 实现 query 和 queryList 方法查询前置仓列表
- 新增 iterator 方法分页查询前置仓 ID 列表
- 更新相关模型类和控制器以支持新功能

--- a/spring-boot-app/application/pom.xml
+++ b/spring-boot-app/application/pom.xml
@@ -153,6 +153,28 @@
       <version>0.2.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-compress</artifactId>
+      <version>1.27.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.16.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.msgpack</groupId>
+      <artifactId>jackson-dataformat-msgpack</artifactId>
+      <version>0.9.3</version>
+    </dependency>
+
   </dependencies>
 
   <build>
