--- a/spring-boot-app/application/pom.xml
+++ b/spring-boot-app/application/pom.xml
@@ -175,6 +175,12 @@
       <version>0.9.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>33.4.0-jre</version>
+    </dependency>
+
   </dependencies>
 
   <build>
