feat(mybatis): 打印 mybatis sql 日志
- 在 DBConfig 类中添加自定义 MybatisConfiguration
- 在 application.yml 中配置 mybatis.sql 日志级别为 debug
- 更新 README.md，添加 mybatis 打印日志的说明

--- a/spring-boot-app/application/src/main/resources/application.yml
+++ b/spring-boot-app/application/src/main/resources/application.yml
@@ -38,6 +38,7 @@ spring:
 logging:
   level:
     root: info
+    mybatis.sql: debug
   pattern:
 #    console: '%d{HH:mm:ss} %-5p [%15.15t] %-40.40logger{39} :[%X{x-trace-id}] %m%n%wEx'
     file: "%d{yyyy-MM-dd'T'HH:mm:ssXXX} %-5p [%15.15t] %-40.40logger{39} :[%X{x-trace-id}] %m%n%wEx"
