--- a/spring-boot-app/application/src/main/resources/application.yml
+++ b/spring-boot-app/application/src/main/resources/application.yml
@@ -38,7 +38,8 @@ spring:
 logging:
   level:
     root: info
-    mybatis.sql: debug
+    # mapper 接口所在的 package
+    com.github.zzf.learn.app.repo.mysql.db0.mapper: debug
   pattern:
 #    console: '%d{HH:mm:ss} %-5p [%15.15t] %-40.40logger{39} :[%X{x-trace-id}] %m%n%wEx'
     file: "%d{yyyy-MM-dd'T'HH:mm:ssXXX} %-5p [%15.15t] %-40.40logger{39} :[%X{x-trace-id}] %m%n%wEx"
