feat(station): 添加分页查询功能
- 在 StationController 中添加分页查询的 HTTP 接口
-优化了查询参数的处理，支持动态排序
- 新增了 README_RESTFul.md 文件，记录 RESTful API 设计思路

--- a/spring-boot-app/application/src/main/resources/application.yml
+++ b/spring-boot-app/application/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
   cloud:
     consul:
       discovery:
+        prefer-ip-address: true
         instanceId: ${spring.application.name}:${server.port} # 单机启动多个服务，以 server.port 区分
         tags: ['spring-boot', 'actuator']
         metadata:
