--- a/spring-validation/pom.xml
+++ b/spring-validation/pom.xml
@@ -45,7 +45,7 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-validation</artifactId>
+      <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
   </dependencies>
   <description>Demo project for Spring Boot</description>
